#
# $Header: /cvs/oleo/afm/Makefile.am,v 1.5 2001/02/08 00:21:23 pw Exp $
#
# Process this file with automake to produce Makefile.in
#

afmdir=		$(prefix)/share/afm

afm_DATA =	Courier-Bold.afm Courier-BoldOblique.afm \
		Courier-Oblique.afm Courier.afm \
		Helvetica-Bold.afm Helvetica-BoldOblique.afm \
		Helvetica-Oblique.afm Helvetica.afm \
		Symbol.afm \
		Times-Bold.afm Times-BoldItalic.afm \
		Times-Italic.afm Times-Roman.afm

EXTRA_DIST=	$(afm_DATA)

MAINTAINERCLEANFILES = Makefile.in

